Sun Jan 23 18:08:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_stub.mpc:
          Attempt to fix install warnings in windows

Fri Jan 21 15:47:13 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
          Updated for the upcoming release.

Fri Jan 21 14:09:13 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/ndds_stub.mpb:
          Typcode instead of anytypecode was sufficient.

        * connectors/dds4ccm/impl/logger/dds4ccm_logger.mpc:
          reverted last change.

Fri Jan 21 13:40:56 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/ndds_stub.mpb:
        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Common/I2C_Shapes_Common.mpc:
        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Receiver/I2C_Shapes_Receiver.mpc:
        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Sender/I2C_Shapes_Sender.mpc:
        * connectors/dds4ccm/impl/logger/dds4ccm_logger.mpc:
          Resolved link issues on static builds.

Fri Jan 21 10:33:20 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/DAnCE/PartialShutdown/Base/PartialShutdown.mpc:
          No use to not to build Partial_lem_gen because of ccm_noevents

Fri Jan 21 09:26:08 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_lem_stub.mpc:
          Resolved issues regarding to non-dds builds.

Thu Jan 20 15:20:04 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/ndds.mpb:
          Resolves compile issues related to non-dds builds

Thu Jan 20 11:42:53 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Wed Jan 19 13:03:24 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * ciao/Deployment/Handlers/Connection_Handler.h:
                * ciao/Deployment/Handlers/Connection_Handler.cpp: